syntax = "proto3";

package com.gx.wisestone.ezwork.app.grpc;
import "WscoreCommon.proto";
option java_multiple_files = true;
option java_package = "com.gx.wisestone.work.app.grpc.activity";
option java_outer_classname = "AppActivityInterfaceService";


service AppActivityInterface {

    //添加活动
    rpc addActivity (ActivityRequest) returns (AppActivityResponse) {}
    //查询活动列表
    rpc findAllActivityInfos(ActivityQueryRequest) returns (ActivityCommonResponse) {}
    //我的申请列表
    rpc findMyApplyInfos(ActivityQueryRequest) returns (ActivityCommonResponse) {}
    // 活动报名  郑喆说活动不用审核 所以只有apply表就行
    rpc apply (AppActivityApplyDto) returns (AppActivityApplyResponse) {}
    //取消报名
    rpc cancelApply (AppActivityApplyDto) returns (AppActivityApplyResponse) {}
    //查询单个活动报名信息
    rpc findApplyInfo (AppActivityApplyDto) returns (AppActivityApplyResponse) {}
}

message ActivityCommonResponse {
    int32 code = 1; //返回码
    string msg = 2; //返回消息
    com.gx.wisestone.core.grpc.common.QueryDto query = 3;
    repeated AppActivityDto content = 4; //结果列表
    map<string, string> data = 5;
}

message AppActivityResponse{
    int32 code = 1; //返回码
    string msg = 2; //返回消息
    AppActivityDto activityDto = 3;
    map<string, string> data = 5;
}

message AppActivityDto{
    int64 activity_id = 1;
    int64 create_time = 2; //创建时间
    int64 modify_time = 3; //修改时间
    int64 start_time = 4; //活动报名时间
    int64 end_time = 5; //活动截止时间
    string title = 6; //活动标题
    string content = 7; //活动内容，type=2为跳转url
    int32 type = 8; //1.显示内容2.跳转url
    int32 current_num = 9; //当前报名人数
    int32 total_num = 10; //计划报名人数，0表示不限人数
    string image_url = 11; //banner图300*200
    string company_ids = 12; //公司id
    bool has_read = 13; //true已读
}

message ActivityRequest {

    int64 start_time = 4; //活动报名时间 notnull
    int64 end_time = 5; //活动截止时间 notnull
    string title = 6; //活动标题 notnull
    string content = 7; //活动内容，type=2为跳转url
    int32 type= 8; //1.显示内容2.跳转url
    int32 current_num = 9; //当前报名人数
    int32 total_num = 10; //计划报名人数，0表示不限人数
    string image_url = 11; //banner图300*200
    string company_ids = 12; //公司id notnull
}

message ActivityQueryRequest{
    com.gx.wisestone.core.grpc.common.QueryDto query = 3;
    ActivityRequest content = 4; //结果列表
}

message AppActivityApplyResponse {
    int32 code = 1; //返回码
    string msg = 2; //返回消息
    com.gx.wisestone.core.grpc.common.QueryDto query = 3;
    repeated ActivityApplyResponseDto content = 4; //结果列表
    map<string, string> data = 5;
}

message AppActivityApplyDto {
    int64 activity_id = 11; //活动id
    string mark = 12; //备注 仅apply使用
}

message ActivityApplyResponseDto {

    int64 id = 1;
    int64 create_time = 2; //创建时间
    int64 modify_time = 3; //修改时间
    int64 employee_id = 4; //员工id
    string employee_name = 5; //员工姓名
    string employee_mobile = 6; //联系方式
    string company_name = 7; //公司名字
    int64 company_id = 8; //公司id
    int32 employee_age = 9; //年纪
    int32 employee_gender = 10; //性别
    int64 activity_id = 11; //活动id
    string mark = 12; //备注
}
