syntax = "proto3";

package com.gx.wisestone.appserver.grpc;

import "AppCommon.proto";
import "WscoreCommon.proto";
option java_multiple_files = true;
option java_package = "com.gx.wisestone.work.app.grpc.information";
option java_outer_classname = "AppInformationService";
option objc_class_prefix = "WS";

service AppInformation{
    //个人信息
    rpc getInformation(PersonInformationRequest) returns (AppInformationResponse) {}
    //物业公告
    rpc getAnnouncement(AnnouncementRequest) returns (AppAnnouncementResponse) {}
}



message PersonInformationRequest {
    int64 app_user_id = 1;
    com.gx.wisestone.core.grpc.common.QueryDto query = 2;
}

message AnnouncementRequest {
    com.gx.wisestone.core.grpc.common.QueryDto query = 1;
}


message AppInformationResponse{
     int32 code = 1;//返回码
     string msg = 2;//返回消息
     map<string,string> data = 3;
     repeated AppInformationNoticeRecordDto appInformationNoticeRecordDto = 4; //返回消息
     com.gx.wisestone.core.grpc.common.QueryDto query = 5;
}
message AppAnnouncementResponse{
    int32 code = 1;//返回码
    string msg = 2;//返回消息
    map<string,string> data = 3;
    repeated AppAnnouncementDto appAnnouncementDto = 4; //返回消息
    com.gx.wisestone.core.grpc.common.QueryDto query = 5;
}


message AppInformationNoticeRecordDto {
    int64 id = 1;
    string title = 2;  //类型
    string content = 3;  //内容
    int64 target_owner_id = 4;  //目标业主id
    int64 app_user_id = 5;  //目标接入者标识
    int64 create_time = 6;
    int32 type = 7;  //1 鹰眼监控 2 智慧访客 3 亲人关怀 4 房屋绑定
    string user_id = 8; // 用户id
}

message AppAnnouncementDto {
    int64 id = 1;
    string title = 2;
    string content = 3;
    int32 target = 4;  //1 用户app 2 物业app 3 微信公众号
    int32 type = 5;  //1 普通 2 紧急 3 报警 4 置顶
    string link = 6;
    int64 create_time = 7;
    int64 update_time = 8;
    int64 push_time = 9;  //发布时间
    int64 end_time = 10;  //结束时间
    int32 status = 11;  //1 发布状态 2过期状态
    string sys_tenant_no = 12;
}
